# lokadev

./: .replit  README.md  pnpm-lock.yaml
.agents/: agent_assets_metadata.toml
artifacts/lokadev/: index.html  package.json
artifacts/lokadev/.replit-artifact/: artifact.toml
artifacts/lokadev/src/: App.tsx  index.css
artifacts/lokadev/src/components/layout/: Footer.tsx  MainLayout.tsx  Navbar.tsx
artifacts/lokadev/src/pages/: docs.tsx  download.tsx  home.tsx  not-found.tsx  privacy.tsx
lokadev-app/: Makefile  README.md  go.mod  go.sum  install.sh  main.go
lokadev-app/.github/workflows/: ci.yml  release.yml
lokadev-app/cmd/lokadev/: create.go  db.go  platform_helpers.go  project_cmds.go  root.go  service.go
lokadev-app/internal/config/: config.go
lokadev-app/internal/container/: namespace_linux.go  namespace_windows.go
lokadev-app/internal/database/: manager.go
lokadev-app/internal/projects/: project.go
lokadev-app/internal/registry/: alive_unix.go  alive_windows.go  registry.go
lokadev-app/internal/server/: manager.go
lokadev-desktop/: README.md  index.html  package.json  tailwind.config.js
lokadev-desktop/src/: App.tsx  index.css
lokadev-desktop/src-tauri/: Cargo.toml  tauri.conf.json
lokadev-desktop/src-tauri/capabilities/: default.json
lokadev-desktop/src-tauri/icons/: README.md
lokadev-desktop/src-tauri/src/: lib.rs  main.rs
