[package]
name = "lokadev-desktop"
version = "1.0.4"
description = "LokaDev Desktop Application"
authors = ["ptraxzy"]
license = "MIT"
repository = "https://github.com/ptraxzy/lokadev"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "shell-open",
  "shell-execute",
  "system-tray",
  "window-hide",
  "window-show",
  "window-minimize",
  "window-unminimize",
  "window-maximize",
  "window-unmaximize",
  "window-close",
  "window-set-focus",
  "notification-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
